--- a/voting-app-pod.yaml
+++ b/voting-app-pod.yaml
@@ -8,6 +8,6 @@ metadata:
 spec:
   containers:
   - name: voting-app
-    image: kodekloud/examplevotingapp_vote:v1
+    image: dockersamples/examplevotingapp_vote
     ports:
     - containerPort: 80
